--- a/products/templates/products/details.html
+++ b/products/templates/products/details.html
@@ -51,10 +51,13 @@
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group">
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item-id="{{ product.id }}" id="id_qyt_{{ product.id }}">
-                                    </div>
+                                    
+                                    <input class="form-control qty_input" type="number" 
+                                    name="quantity" value="1" min="1" max="99" data-item-id="{{ product.id }}" id="id_qyt_{{ product.id }}">
+                                    
                             </div>
                         </div>
+                        
                         <div class="col-12">
                             <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5"><span class="icon">
                                 <i class="fas fa-arrow-left"></i>
@@ -64,6 +67,8 @@
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}"> 
                     </form>
+                    <a class="update-link text-info"><small>Update</small></a> 
+                    <a class="remove-item text-danger float-right" id="remove_{{item.product_id}}"><small>Remove</small></a>
                 </div>
             </div>
         </div>
