--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,10 @@
     <script src="https://kit.fontawesome.com/2f07f08452.js" crossorigin="anonymous"></script>
     <!-- jQuery -->
      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+     <script
+  src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+  crossorigin="anonymous"></script>
 {% endblock %}
 
 </head>
@@ -83,7 +87,7 @@
                             <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                             <p class="my-0">
                                 {% if grand_total %}
-                                ${{ grand_total|floatformat:2 }}
+                                £{{ grand_total|floatformat:2 }}
                                 {% else %}
                                 £0.00
                                 {% endif %}
