Add the models for checkout and migration

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -33,7 +33,7 @@
                             <thead class="text-black">
                                 <tr>
                                     <th scope="col">Image</th>
-                                    <th scope="col">Product Info</th>
+                                    <th scope="col">Information</th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Quantity</th>
                                     <th scope="col">Subtotal</th>
