--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -114,8 +114,8 @@
                                         </h4>
                                         {% if free_delivery_delta > 0 %}
                                         <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>£{{
-                                                free_delivery_delta|floatformat:2 }}</strong> more!
+                                            You could get free delivery by spending just <strong>
+                                                £{{ free_delivery_delta|floatformat:2 }}</strong> more!
                                         </p>
                                         {% endif %}
                                     </td>
@@ -128,7 +128,7 @@
                                             </span>
                                             <span class="text-uppercase">Continue Shopping</span>
                                         </a>
-                                        <a href="#" class="btn btn-black btn-lg rounded-0">
+                                        <a href="{% url 'checkout'%}" class="btn btn-black btn-lg rounded-0">
                                             <span class="icon">
                                                 <i class="fas fa-lock"></i>
                                             </span>
